2010-11-12  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc command.c (help_command) util.h:
	"help" was collapsing all text to lower case, which broke "help 3D".
	Remove a vestigial call to lower_case().  Also make sure it is indexed.

2010-11-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/set.c src/unset.c:
	Re-arrange the order of axes in the axis_table[] array so that all the
	parametric axes are at the end.  This makes it easy to iterate over only
	those axes that make sense for the "set/unset logscale" commands.
	Previously, commands like "set logscale tuv" were silently accepted,
	leading to strange internal state.

	* src/plot2d.c:  Issue an error message if the user tries to plot in 
	polar mode with a style that is not supported.
	Bug #3072150

	* src/axis.h (AXIS_INIT2D) src/set.c (set_logscale):
	Keep AXIS.log_base in sync with AXIS.base.
	Otherwise calls to AXIS_DO_LOG or AXIS_UNDO_LOG prior to the first plot
	command cause divide-by-zero or other math errors.

2010-11-07  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c (df_readascii): The "labels" style did not work with 
	pseudocolumns (e.g. "using 1:2:0"). Now it correctly handles pseudocolumns 
	0, -1, -2.
	
	* term/cairo.trm: Documentation fix: the section on the default size 
	for the pngcairo terminal was incorrect.

2010-11-06  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/plot3d.c src/plot3d.h src/set.c src/show.c src/save.c
	docs/gnuplot.doc demo/kdensity2d.dem: New option "kdensity2d" for 
	"set dgrid3d" to create two-dimensional kernel density plots.

2010-11-03  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc:  typos
	* docs/term-ja.diff docs/gnuplot-ja.doc:
	Sync Japanese documentation to gnuplot.doc rev 1.633

2010-11-02  Michael Murphy  <murphy-md@users.sourceforge.net>

	* share/LaTeX/gnuplot-lua-tikz.sty:  Change the tikz default linetype 0