@@ -16,15 +16,8 @@ Table of contents:
 	- How to install WPS icon for drag&drop.
     * Compiling Gnuplot with the wxWidgets terminal
 	- Notes about the requirements of the `wxt` terminal.
-    * Front-ends for gnuplot
-	- Few notes about graphical front-ends for gnuplot.
 
-  The description of preprocessor options previously found here has
-been moved to a new file called PORTING. Generic installation
-instructions for `configure', such as distributed with FSF/GNU
-packages, are in INSTALL.gnu.
-
-If you're installing a binary package, you may still want to check out
+If you are installing a binary package, you may still want to check out
 some sections of this document, particularly the one discussing
 environment variables.
 
@@ -173,7 +166,6 @@ $ ./configure --help
 
   --disable-history-file  do not use history file
   --disable-mouse         disable mouse for interactive terminals
-  --disable-with-image    disable image support
   --disable-x11-mbfonts   disable multi-byte font support for x11
   --disable-binary-x11-polygon  disable binary_x11_polygon
   --disable-x11-external  disable drawing to windows belonging to external apps
@@ -183,12 +175,16 @@ $ ./configure --help
   --disable-objects       disable rectangles and other objects
   --disable-macros        disable command line macros
   --enable-mgr            enable MGR terminal
-  --disable-fiterrvars    disable fitting error variables
   --enable-rgip           enable Redwood Graphics Interface Protocol
   --disable-h3d-quadtree  disable quadtree optimization in hidden3d code
   --enable-h3d-gridbox    enable gridbox optimization in hidden3d code
   --disable-wxwidgets     wxWidgets terminal (default enabled)
   --enable-backwards-compatibility       enable deprecated syntax
+  --disable-bitmap-terminals
+			the code in bitmap.c has a copyright notice that is more
+			restrictive that the gnuplot license.  This option
+			disables inclusion of this code and any terminals that
+			depend on it (mostly HP deskjet era dot matrix printers).
 
 Options marked with (*) are enabled by default, ie. these features or
 packages are used if configure detects them even if the corresponding
@@ -398,12 +394,6 @@ non-default location that is not searched by the preprocessor or linker.
   --with-readline=gnu
 
    Use the GNU readline library instead of gnuplot's builtin readline.
-   Version 4.2 or better is required.
-
-   Please note that there was a bug in GNU readline up to and including 4.3
-   that makes gnuplot exit if the terminal window is resized. A fix is
-   described at
-   http://sourceforge.net/tracker/index.php?func=detail&aid=608874&group_id=2055&atid=102055 .
 
   --with-readline[=DIR]
 
@@ -418,10 +408,6 @@ non-default location that is not searched by the preprocessor or linker.
    is on by default, i.e. configure will check if the library exists,
    and use it if found, if you don't specify any option regarding this
    package.
-
-  --with-png[=DIR]
-
-    Dto. for the png library. This option is on by default.
 
   --with-pdf[=DIR]
 
